2006-02-23  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ basic-notation, advanced-notation,
	global.itely, invoking.itely, tutorial,itely:
	minor fixes from mailist.

2006-02-23  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/index.html.in: changes concern the previous release.

	* input/regression/+.ly: cultivate typographical terminology.

2006-02-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/GNUmakefile: remove $(CROSS) support from
	Documentation/user/GNUmakefile. Use --disable-documentation for that.

	* VERSION (PATCH_LEVEL): release 2.7.36

	* lily/slur.cc: add avoid-slur (ugh.)
	
	* lily/slur-configuration.cc (fit_factor): oops, skip point if
	intersection gets smaller. This fixes slurs over extreme points.

	* lily/melody-engraver.cc (stop_translation_timestep): ignore
	stems with neutral-direction set.

	* lily/piano-pedal-engraver.cc (create_text_grobs): idem.

	* lily/open-type-font.cc (load_table): format error.

	* lily/change-iterator.cc (process): format fix.

	* flower/include/international.hh (_f): idem.

	* flower/include/std-string.hh: add format printf attribute.

	* scm/define-grobs.scm (all-grob-descriptions): height of all
	PedalLineSpanner is Y-extent property. Fixes pedal-ped.ly

	* lily/ambitus-engraver.cc (finalize): use grob_array. This fixes
	ambitus lines.

	* input/regression/beam-cross-staff-slope.ly: remove decrescendo.

2006-02-22 Erik Sandberg  <mandolaerik@gmail.com>

	* input/regression/: upgraded syntax for some files.

	* THANKS: Add bughunters.

2006-02-22  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ invoking.itely, advanced-notation.itely,
	global.itely: long-awaited "let's make chapter 10 not suck"
	update.  Rearrange chapter 10; now called "global issues",
	addresses file structure, etc.  Some info from other files
	moved into global.itely.

2006-02-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/accidental-engraver.cc (acknowledge_rhythmic_head): also