@@ -4,6 +4,8 @@
 	global.itely, invoking.itely, tutorial,itely:
 	minor fixes from mailist.
 
+	* scm/define-markup-commands.scm: improve docs of \filled-box.
+
 2006-02-23  Heikki Junes  <hjunes@cc.hut.fi>
 
 	* Documentation/index.html.in: changes concern the previous release.
